upload new code in the github environment

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <style>
 .nav-bartop {
-  background-color: #333;
+  background-color: #0C5959;
   overflow: hidden;
 }
 
 /* Style the links inside the navigation bar */
 .nav-bartop  a {
-  float: left;
+  float: right;
   color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
@@ -24,14 +24,14 @@
 
 /* Change the color of links on hover */
 .nav-bartop  a:hover {
-  background-color: #ddd;
+  background-color: #F2A71B;
   color: black;
 }
 
 /* Add a color to the active/current link */
 .nav-bartop  a.active {
-  background-color: #4CAF50;
-  color: white;
+  background-color: #24BFB0;
+  color: red;
 }
 </style>
 <body>
