this is another update before three pm

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ body {
     <!--This is the navbar that will be displayed on top of the page --> 
     <div class="nav-bartop">
         <!--Put your logo here and place it to your left side of the navbar --> 
-        <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; open</span>
+        <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Menu</span>
         <a href="#Projects">Projects</a>
         <a href="#Profile">About</a>
         <a href="#contact">Contact</a>        
