--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@ body {
   color: red;
 }
 
+/* Styles for the side bar nav*/
 .sidenav {
   height: 100%;
   width: 0;
@@ -46,7 +47,7 @@ body {
   z-index: 1;
   top: 0;
   left: 0;
-  background-color: #111;
+  background-color: #033A40;
   overflow-x: hidden;
   transition: 0.5s;
   padding-top: 60px;
