--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
     /*This is where all the stuff about the header goes to as well as the part that controls*/
     .header {
-        background-color: #f1f1f1;
+        background-color: #313540;
         padding: 30px;
         text-align: center;
     }    
