upload let's see what you did

--- a/index.html
+++ b/index.html
@@ -79,9 +79,11 @@
 
     /*This is where all the stuff about the header goes to as well as the part that controls*/
     .header {
-        background-color: #313540;
+        background-color: #033A40;
         padding: 30px;
         text-align: center;
+        color: #f1f1f1;
+        height: 100vh;
     }    
     .content {
         padding: 16px;
