upload let's see what you did

--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
 <body>
     <!--This is the welcome section of the whole website -->    
     <div class="header">
-        <h2>Welcome to Farisani Portfolio Page</h2>
-        <p>Scroll down to see more about me</p>
+        <h1>Welcome to Farisani Portfolio Page</h1>
+        <h2>Scroll down to see more about me</h2>
     </div>
 
     <!--This is the navbar that will be displayed on top of the page --> 
