upload let's see what you did

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
         text-align: center;
         color: #f1f1f1;
         height: 50vh;
+        font-size: 17px;
     }    
     .content {
         padding: 16px;
@@ -110,7 +111,7 @@
     </div>
 
     <!--This is the navbar that will be displayed on top of the page --> 
-    <div class="nav-bartop">
+    <div id= "nav-bartop" class="nav-bartop">
         <!--Put your logo here and place it to your left side of the navbar --> 
         <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776; Menu</span>
         <a href="#Projects">Projects</a>
