upload work and see the progress

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <h2><b>Early Life</b></h2>
         <h3>Student at The Coding Ground</h3>
         <p>
-           Born in (July 26 1995), Limpopo, South Africa. Farisani is the youngest of 2 other siblings
+           Born in (July 26 1995), Limpopo, South Africa. Farisani is the youngest of 2 other siblings.
            
         </p>
 
