--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
 </head>
 
 <body>
+    <!--Create a top nav bar that you will use in your page-->  
+    <div class="navbar">
+        <div><a href="#home">About</a></div>
+        <div><a href="#news">Blog Posts</a></div>
+        <div><a href="#contact">Contact</a></div>
+    </div>  
+
     <!--Create a div to hold the title block of your blog-->    
     <div class="title-block">
        <h1>Welcome to Farisani Portfolio</h1>
@@ -16,7 +23,7 @@
 
     <!--Create a div to hold your image-->    
     <div class="img-div">
-        <img class="cat-image"
+        <img class="my-image"
         src="Images/Farisani_image.jpg" alt="Cat Project">
     </div>
 
@@ -48,6 +55,36 @@
       <h2>Challenges faced</h2>
 
     </div>
+   
     </div>
+
+    <div class="bottom-section">
+    <div>
+        <p>Heading</p>
+        <ul>
+            <li><a href="#home">About</a></li>
+            <li><a href="#news">Blog Posts</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul> 
+    </div>
+          
+    <div>
+        <p>Heading</p>       
+        <ul>
+            <li><a href="#home">About</a></li>
+            <li><a href="#news">Blog Posts</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>           
+    </div>  
+
+    <div>
+        <p>Heading</p>      
+        <ul>
+            <li><a href="#home">About</a></li>
+            <li><a href="#news">Blog Posts</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>         
+    </div>
+    </div>       
     </body>
     
