--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <!--Create a top nav bar that you will use in your page-->  
     <div class="navbar">
-        <div><a href="#full-card">About</a></div>
+        <div><a href="#about">About</a></div>
         <div><a href="https://farisanipaul.github.io/Farisani.github.io/blog.html" target="_blank">Blog Posts</a></div>
         <div><a href="#img-div">Photos</a></div>
         <div><a href="#bottom-section">Contact</a></div>
@@ -32,9 +32,9 @@
     <!--Create the card to hold all the content of the blog-->
     <div id="full-card" class="fullCard">
 
-    <div><h1>About Farisani</h1></div>
+    <div id="about"><h1>About Farisani</h1></div>
 
-    <div class="intro-block">
+    <div class="intro-block" id="intro-block">
 
         <h2><b>Ratshikombo Farisani Paul</b></h2>
         <h3>Student at The Coding Ground</h3>
@@ -49,7 +49,7 @@
 
     </div>
           
-    <div class="discussion">
+    <div class="discussion" id="discussion">
 
         <h2><b>Early Life</b></h2>
         <h3>Love for Solar Energy Systems</h3>
@@ -67,7 +67,7 @@
     <div class="align-items-correctly">
         <p><b>Menu</b></p>
         <ul>
-            <li><a href="#full-card">About</a></li>
+            <li><a href="#about">About</a></li>
             <li><a href="https://farisanipaul.github.io/Farisani.github.io/blog.html" target="_blank">Blog Posts</a></li>
             <li><a href="#img-div">Photos</a></li>
             <li><a href="#bottom-section">Contact</a></li>
@@ -77,8 +77,8 @@
     <div class="align-items-correctly">
         <p><b>QuickLinks</b></p>      
         <ul>
-            <li><a href="#home">Student at The Coding Ground</a></li>
-            <li><a href="#news">Early Life</a></li>
+            <li><a href="#intro-block">Student at The Coding Ground</a></li>
+            <li><a href="#discussion">Early Life</a></li>
           </ul>           
     </div>  
 
