upload modified code

--- a/index.html
+++ b/index.html
@@ -6,10 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css" media="screen"/> 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Vollkorn&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Vollkorn:wght@400;600&display=swap" rel="stylesheet"> 
     <title>Document</title>
 </head>
 
-<body>
+<body oncontextmenu="return false;">
     <!--Create a top nav bar that you will use in your page-->  
     <div class="navbar">
         <div><a href="#about">About</a></div>
@@ -101,5 +105,9 @@
     </div>
     </div>       
     </body>
+    <script>
+
+
+    </script>
 
     
