upload most recent work

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Document</title>
 </head>
 
-<body oncontextmenu="return false;">
+<body >
     <!--Create a top nav bar that you will use in your page-->  
     <div class="navbar">
         <div><a href="#about">About</a></div>
